@@ -23,7 +23,7 @@ public class Pages {
     @SneakyThrows
     public static <T extends AbstractPage> T getPage(Class<T> clazz) {
         return Allure.step("Обращение к странице " + clazz.getSimpleName(), () -> {
-            T page = clazz.newInstance();
+            T page = clazz.getConstructor().newInstance();
             PageFactory.initElements(Manager.driver(), page);
             Manager.takeScreenshot();
             return page;
